Use Arrays.asList instead of List.of in Groovy script for test to avoid VerifyError
https://github.com/jenkinsci/workflow-cps-plugin/pull/635#discussion_r1046343921